# STEMyourBRAIN--Videogame

./: CLAUDE.md  GUIDA_COME_FUNZIONA_IL_GIOCO.md  MULTI_PROVIDER_SETUP.md  Makefile  RAILWAY_DEPLOYMENT.md  README.md  TEST_OPENAI.md  docker-compose.yml  generate_winter_map.py  generate_winter_map_v2.py  generate_winter_map_v3.py
docs/: GUIDA_PERSONAGGI_RAGAZZI.md  GUIDA_TILED_RAGAZZI.md  PROMPT_VERSIONING.md  RAILWAY_DEPLOYMENT.md  UPDATING_PROMPTS_AND_NAMES.md
philoagents-api/: .env.example  .env.railway.example  Dockerfile  Dockerfile.railway  README.md  pyproject.toml  railway.toml
philoagents-api/src/philoagents/: config.py
philoagents-api/src/philoagents/application/conversation_service/: generate_response.py
philoagents-api/src/philoagents/application/conversation_service/workflow/: __init__.py  chains.py  graph.py  nodes.py  state.py  tools.py
philoagents-api/src/philoagents/application/llm_service/: __init__.py  model_factory.py
philoagents-api/src/philoagents/application/rag/: embeddings.py  retrievers.py
philoagents-api/src/philoagents/domain/: __init__.py  philosopher.py  philosopher_factory.py  prompts.py
philoagents-api/src/philoagents/infrastructure/: api.py
philoagents-api/src/philoagents/infrastructure/mongo/: __init__.py
philoagents-api/tools/: call_agent.py
philoagents-ui/: Dockerfile  Dockerfile.railway  docker-entrypoint.sh  index.html  nginx.conf  railway.toml
philoagents-ui/src/classes/: DialogueManager.js
philoagents-ui/src/scenes/: Game.js  MainMenu.js  Preloader.js
philoagents-ui/webpack/: config.js  config.prod.js
(+12 files in other folders)
